<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:layout_height="wrap_content"
        android:icon="@drawable/home"
        android:title="Home"/>

    <item
        android:id="@+id/navigation_Search"
        android:icon="@drawable/baseline_search_black_24dp"
        android:title="Search" />

</menu>