<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Palm_Tree">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scrollbarStyle="insideOverlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="900dp"
                android:visibility="visible"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="259dp">

                <ImageView
                    android:id="@+id/palmtree"
                    android:layout_width="match_parent"
                    android:layout_height="216dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:color/background_dark" />

                <TextView
                    android:id="@+id/Facts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="225dp"
                    android:textColor="#6f9b41"
                    android:text="Facts"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <TextView
                    android:id="@+id/common_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="260dp"
                    android:textColor="#6f9b41"
                    android:text="Common Name: Palm" />

                <TextView
                    android:id="@+id/Tree_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="287dp"
                    android:background="@android:color/background_light"
                    android:textColor="#6f9b41"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="308dp" />

                <TextView
                    android:id="@+id/Price_Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/Price"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="-453dp"
                    android:text="Price"
                    android:textColor="#6f9b41"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <TextView
                    android:id="@+id/Price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="453dp"
                    android:background="@android:color/background_light"
                    android:gravity="center"
                    android:textColor="#6f9b41"
                    android:text="$30.00 Each" />

                <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
                    android:id="@+id/quantity_button"
                    android:layout_width="86dp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/purchase"
                    android:layout_toStartOf="@+id/Facts"
                    android:visibility="visible"
                    app:finalNumber="50"
                    app:initialNumber="0">

                </com.cepheuen.elegantnumberbutton.view.ElegantNumberButton>

                <Button
                    android:id="@+id/purchase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="371dp"
                    android:layout_toEndOf="@+id/Price_Title"
                    android:text="Purchase" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>