<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Search">

    <EditText
        android:id="@+id/searchFilter"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType=""
        android:importantForAutofill="no" />


    <ListView
        android:id="@+id/thelist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/searchFilter"/>

</RelativeLayout>