<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchFilter">


    <com.mancj.materialsearchbar.MaterialSearchBar
       android:id="@+id/search_bar"
        android:layout_alignParentTop="true"
        app:mt_speechMode="false"
        app:mt_hint="Search"
        app:mt_maxSuggestionsCount="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_search"
        android:layout_width="match_parent"
        android:layout_height="463dp"
        android:layout_above="@+id/bottomNavView_Bar"
        android:layout_below="@+id/search_bar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottomNavView_Bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        app:menu="@menu/navigation"></android.support.design.widget.BottomNavigationView>


</RelativeLayout>